--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,8 @@ body {
   background-size: cover;
   background-position: center center;
   position: relative;
+  -webkit-box-shadow: inset 0 0 0 1000px rgba(2, 30, 73, 0.6);
+  -moz-box-shadow: inset 0 0 0 1000px rgba(2, 30, 73, 0.6);
   box-shadow: inset 0 0 0 1000px rgba(2, 30, 73, 0.6);
 }
 /* #0d6efd */
@@ -31,11 +33,6 @@ body {
 .welcome-cta {
   margin-top:3rem;
   -webkit-transition: margin 0.3s ease-in-out;
-}
-.welcome-cta:hover {
-  margin-top: 4rem;
-  -webkit-transition: margin 0.3s ease-in-out;
-  cursor: pointer;
 }
 
 /* Tiles */
@@ -65,11 +62,16 @@ body {
     transform: scale(1.1);
     -webkit-transition: all 0.3s ease-in-out;
   }
+  .welcome-cta:hover {
+    margin-top: 4rem;
+    -webkit-transition: margin 0.3s ease-in-out;
+    cursor: pointer;
+  }
 }
 
 /* Mobile Only */
 @media (max-width: 768px) {
-  .projects-article, .contact-article {
+  .welcome-article, .projects-article, .contact-article {
     height: 100% !important;
     padding-top: 7rem;
   }
