--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,8 @@ body {
   color: white;
   background:url('../assets/images/brad-starkey-pVyaUGCuUU4-unsplash.jpg');
   background-size: cover;
-  background-position: center center;
+  background-position: center;
+  background-repeat: no-repeat;
   position: relative;
   -webkit-box-shadow: inset 0 0 0 1000px rgba(2, 30, 73, 0.6);
   -moz-box-shadow: inset 0 0 0 1000px rgba(2, 30, 73, 0.6);
