--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,7 +11,7 @@ body {
 }
 /* #0d6efd */
 
-.nav-header, .welcome-article {
+.nav-header, .welcome-article, .contact-article {
   max-width: 768px;
   padding-left: 15px;
   padding-right: 15px;
@@ -25,6 +25,9 @@ body {
 }
 .nav-header .nav-link {
   color: rgba(255, 255, 255, .5);
+}
+.nav-link:hover {
+  cursor: pointer;
 }
 .nav-header .active {
   color: #fff;
@@ -47,7 +50,17 @@ body {
   background-size: cover;
   background-position: center;
   -webkit-transition: all 0.3s ease-in-out;
-  box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.7);
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.8);
+}
+
+/* Contact */
+.contact-icon-wrapper {
+  padding: 3rem;
+  border: 4px solid white;
+  -webkit-transition: all 0.3s ease-in-out;
+}
+.contact-icon-wrapper:hover {
+  background-color: black;
 }
 
 /* Desktop Only */
@@ -78,5 +91,10 @@ body {
   }
   .welcome-cta {
     margin-top:1rem;
+  }
+  .contact-icon-wrapper {
+    padding: 2rem;
+    width: 60%;
+    margin: 0 auto 1rem;
   }
 }
