--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -45,7 +45,7 @@ body {
   overflow: hidden;
   height: 250px;
   width: 100%;
-  border: 1px solid white;
+  border: 2px solid white;
   margin-bottom: 24px;
   border-radius: 5px;
   background-size: cover;
@@ -89,7 +89,8 @@ a.project-link {
 /* Contact */
 .contact-icon-wrapper {
   padding: 3rem;
-  border: 4px solid white;
+  border: 2px solid white;
+  border-radius: 5px;
   -webkit-transition: all 0.3s ease-in-out;
 }
 .contact-icon-wrapper:hover {
